{
    "name": "Player",
    "maps": [
        {
            "name": "Player",
            "id": "6cd81b9d-7a0e-4935-b607-10f7e79d0eba",
            "actions": [
                {
                    "name": "DebugShoot",
                    "type": "Button",
                    "id": "08e8ccf3-2454-45f8-8e18-ed72b4c3bf28",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "RotateAim",
                    "type": "Button",
                    "id": "71f53931-0ccd-42a4-b3bf-c170c862c1dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ModeSwitch",
                    "type": "Button",
                    "id": "0d96e901-2764-486b-ae3c-fb247e439a69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Force",
                    "type": "Button",
                    "id": "831fb5c5-5aca-4d69-bbb7-91e75de9f026",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f323c88a-ce58-403e-be11-c5e0767a7d53",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "DebugShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c5a9ed0-11c2-4bef-bbd8-392b8f209399",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DebugShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5ac3b81-076f-4ec4-9005-8e91aa00f956",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b2b08a6-3145-4548-9948-5f54ba29e4d1",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87a011e7-9ad2-40d9-8987-a7cfafe0b025",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "Scale(factor=10)",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8279e135-80f4-4d7e-a958-0dda15302005",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "Scale(factor=10)",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "563f40a1-6d1f-4b01-b83e-e44dfdbefb34",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed305e5e-0fb8-433c-b80b-8820e8794182",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ef67657-909b-40fe-b5b6-e80cb2589b7b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "Invert,Scale(factor=10)",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92cdbdd3-6cdc-4492-97de-59f88977f18d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "Invert,Scale(factor=10)",
                    "groups": "Keyboard&Mouse",
                    "action": "RotateAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b2d3706-6f76-4530-aae0-9d5097622fec",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ModeSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "505e70bd-96c4-40e9-a460-f3d1bd1bd9c3",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ModeSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3db34064-130e-4254-837b-fa72c52625f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Force",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a024431-dccc-4170-98a7-64e066903222",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Force",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "7fc58272-c18d-48a4-8881-2c9a24711b84",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}